--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
+    <script type="module" defer src="script.js"></script>
     <title>Bankist</title>
   </head>
   <body>
@@ -27,7 +28,7 @@
         />
         <!-- In practice, use type="password" -->
         <input
-          type="text"
+          type="password"
           placeholder="PIN"
           maxlength="4"
           class="login__input login__input--pin"
@@ -122,7 +123,5 @@
     <!-- <footer>
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
-
-    <script src="script.js"></script>
   </body>
 </html>
