--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 
       <!-- MOVEMENTS -->
       <div class="movements">
-        <div class="movements__row">
+        <!-- <div class="movements__row">
           <div class="movements__type movements__type--deposit">2 deposit</div>
           <div class="movements__date">3 days ago</div>
           <div class="movements__value">4 000€</div>
@@ -62,7 +62,7 @@
           </div>
           <div class="movements__date">24/01/2037</div>
           <div class="movements__value">-378€</div>
-        </div>
+        </div> -->
       </div>
 
       <!-- SUMMARY -->
